# nse-adaptive-regime-trading

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DATA_PIPELINE_README.md  DATA_QUALITY_README.md  EXECUTION_VERIFIED.md  FACTOR_COMMANDS.md  FINAL_5_PERCENT_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_GUIDE.md  INSTALLATION_ISSUE_SOLVED.md  INSTALL_STRATEGY.md  LICENSE  Makefile  QLIB_IMPLEMENTATION.md  QLIB_IMPLEMENTATION_SUMMARY.md  QLIB_MODELS_README.md  QLIB_QUICK_REFERENCE.md  QLIB_QUICK_START.md  QLIB_REGIME_IMPLEMENTATION.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  VALIDATION_COMPLETE.md  pyproject.toml  requirements-minimal.txt  requirements.txt  setup.py  verify_qlib_implementation.py
config/: broker_config.yaml  data_quality_config.yaml  data_sources.yaml  factor_config.yaml  qlib_config.yaml  qlib_model_config.yaml  risk_config.yaml  tensortrade_config.yaml  trading_rules.yaml  zerodha_config.yaml
deprecated/: README.md  run_with_path.sh
docs/: README.md  api_reference.md  architecture.md  strategy_overview.md
docs/guides/: DATA_PIPELINE_README.md  FACTOR_COMMANDS.md  INSTALLATION_GUIDE.md  INSTALL_STRATEGY.md  QUICK_START.md
docs/qlib/: QLIB_IMPLEMENTATION.md  QLIB_MODELS_README.md  QLIB_QUICK_REFERENCE.md  QLIB_QUICK_START.md  QLIB_REGIME_IMPLEMENTATION.md
notebooks/: README.md
notebooks/experiments/: 01_regime_detection_experiment.ipynb
notebooks/exploratory/: 01_data_exploration.ipynb
scripts/: __init__.py  analyze_backtest.py  generate_factors.py  optimize_hyperparameters.py  run_backtest.py  run_live_trading.py  run_paper_trading.py  setup_broker.py  setup_data_pipeline.py  setup_qlib_data.py  train_models.py  train_qlib_models.py  train_rl_agent.py  update_symbol_mappings.py
src/: __init__.py  cli.py
src/backtesting/: __init__.py  backtest_engine.py  performance_analyzer.py
src/data_pipeline/: __init__.py  data_storage.py  data_validator.py  openbb_client.py  pipeline.py  quality_reporter.py
src/execution/: README.md  __init__.py  broker_factory.py  broker_interface.py  dhan_broker.py  kite_broker.py  order_manager.py  paper_broker.py  symbol_mapper.py
src/feature_engineering/: __init__.py  factor_analysis.py  feature_store.py  qlib_factors.py  regime_features.py  technical_indicators.py
src/portfolio/: __init__.py  optimizer.py
src/qlib_models/: __init__.py  model_trainer.py  signal_generator.py
src/regime_detection/: __init__.py  hmm_regime.py  wasserstein_regime.py
src/risk_management/: __init__.py  circuit_breaker.py  risk_controller.py
src/rl_strategy/: __init__.py
src/strategies/: __init__.py  regime_adaptive_strategy.py
src/utils/: __init__.py  database.py  helpers.py  logging_config.py  market_calendar.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_broker_flow.py  test_data_pipeline.py
tests/performance/: __init__.py  test_benchmarks.py
tests/unit/: __init__.py  test_data_pipeline.py  test_data_quality.py  test_execution.py  test_execution_edge_cases.py  test_factors_and_regimes.py  test_qlib_models.py  test_utils.py
